infra/k8s/auth-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
      - name: auth-mongo
        image: mongo:4.2.13
        ports:
        - containerPort: 27017
---


apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-svc
spec:
  selector:
    app: auth-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      name: auth-mongo
