infra/k8s/kafka-nodeport-depl.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-external
spec:
  type: NodePort
  ports:
    - port: 9092
      nodePort: 30092
  selector:
    app: kafka
