infra/k8s/order-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: muhammedfayiscc/s-cart-orders
---
#infra/k8s/orders-svc.yml

apiVersion: v1
kind: Service
metadata:
  name: orders-svc
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: orders
