infra/k8s/payments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: muhammedfayiscc/s-cart-payments
---
#infra/k8s/payments-svc.yml

apiVersion: v1
kind: Service
metadata:
  name: payments-svc
spec:
  selector:
    app: payments
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: payments
