infra/k8s/products-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: muhammedfayiscc/s-cart-products
---
#infra/k8s/auth-svc.yml

apiVersion: v1
kind: Service
metadata:
  name: products-svc
spec:
  selector:
    app: products
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: products
