infra/k8s/zookeeper-depl.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  serviceName: zookeeper-svc
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:latest
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-svc
spec:
  ports:
    - port: 2181
  clusterIP: None
  selector:
    app: zookeeper
