infra/k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: s-cart.com
    http:
      paths:
      - path: /api/users/(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-svc
            port:
              number: 3000
      - path: /api/products/(.*)
        pathType: Prefix
        backend:
          service:
            name: products-svc
            port:
              number: 3000
      - path: /api/orders/(.*)
        pathType: Prefix
        backend:
          service:
            name: orders-svc
            port:
              number: 3000
      - path: /api/payments/(.*)
        pathType: Prefix
        backend:
          service:
            name: payments-svc
            port:
              number: 3000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: client-svc
            port:
              number: 3000
